test: Trip 도메인 테스트 코드 업데이트
- TripServiceTest 삭제 (TripPlanServiceTest로 대체)
- TripPlanServiceTest 추가 (untracked)
- TripPlanControllerTest 업데이트
  - TripUseCase → TripPlanUseCase 의존성 변경
  - 여행 일정 조회/삭제 테스트 케이스 추가
- Fixture 클래스 업데이트
  - MemberFixture, TripPlanFixture

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>